--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             required
           />
           <label for="DOB" class="tin2" id="label5">Verify DOB</label>
-          <input type="date" id="DOB" class="tin" required />
+          <input type="date" id="DOB" class="tin" placeholder="Select your date of birth" required />
           <label for="vpp" class="tin2" id="label6"
             >Verify Profile Picture</label
           >
