--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="form">
         <!-- <img src="" alt="" class="logo" /> -->
         <form
-          action="https://bard.google.com/chat"
+          action="https://pragyan031.github.io/news-website-non-functioning/responsive_website_peac1.html"
           class="logform"
           id="loginform"
         >
